# MLZoomcamp

./: README.md  pyproject.toml
src/: week1.ipynb  week2.ipynb
