[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Debasish Bose", email = "devbose2008@gmail.com"},
]
dependencies = [
    "numpy>=1.25.2",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.12.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

